--- a/rocker.cabal
+++ b/rocker.cabal
@@ -11,6 +11,7 @@ executable rocker
   other-modules:
   build-depends:
     base >= 4.7 && < 4.8
+    , hmidi
   hs-source-dirs:       src
   default-language:     Haskell2010
-  ghc-options:          -Wall
+  ghc-options:          -Wall -threaded -O2
