--- a/rocker.cabal
+++ b/rocker.cabal
@@ -9,6 +9,7 @@ cabal-version:        >= 1.10
 executable rocker
   main-is:              Main.hs
   other-modules:
+    Instruments
   build-depends:
     base >= 4.7 && < 4.8
     , hmidi
