--- a/rocker.cabal
+++ b/rocker.cabal
@@ -9,7 +9,8 @@ cabal-version:        >= 1.10
 executable rocker
   main-is:              Main.hs
   other-modules:
-    Instruments
+    Drums
+    ProGuitar
   build-depends:
     base >= 4.7 && < 4.8
     , hmidi
