--- a/rocker.cabal
+++ b/rocker.cabal
@@ -14,6 +14,7 @@ executable rocker
   build-depends:
     base >= 4.7 && < 4.8
     , hmidi
+    , transformers
   hs-source-dirs:       src
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -O2
